base/ingress-grafana.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - grafana.k8s.bosh.tokyo
  rules:
  - host: grafana.k8s.bosh.tokyo
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
